--- a/master.css
+++ b/master.css
@@ -122,8 +122,10 @@ html {
 }
 
 .end-s1 {
-  background-image: linear-gradient(rgba(255, 255, 255, 0.8),
-  rgba(255, 255, 255, 0.8)),
+  background-image: linear-gradient(
+      rgba(255, 255, 255, 0.8),
+      rgba(255, 255, 255, 0.8)
+    ),
     url(recursos/langshoots-Q3e5ucjJV5I-unsplash-min.jpg);
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -149,6 +151,51 @@ html {
   font-size: 1rem;
   margin: 1rem;
   line-height: 1.5rem;
+}
+
+.container {
+  display: grid;
+  grid-template-columns: 2fr 1fr 1fr;
+  grid-template-rows: 1fr;
+  grid-gap: 1rem;
+  margin: 1.5rem;
+  color: white;
+}
+
+.left-footer {
+  font-family: "Montserrant-light";
+  margin-right: 2rem;
+}
+
+.left-footer h2 {
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+}
+
+.left-footer p {
+  line-height: 1.5rem;
+  font-size: 0.9rem;
+}
+
+.middle-footer h3 {
+  font-size: 1rem;
+  margin-bottom: 1rem;
+}
+
+.middle-footer {
+  font-family: "Montserrant-light";
+  margin-right: 2rem;
+  font-size: 0.9rem;
+}
+
+.middle-footer li {
+  line-height: 2rem;
+  list-style-type: none;
+}
+
+a {
+  color: white;
+  text-decoration: none;
 }
 
 .footer {
