--- a/master.css
+++ b/master.css
@@ -111,8 +111,8 @@ html {
 }
 
 .middle-s1 {
-  background-image: linear-gradient(rgb(155, 6, 6, 0.8), rgb(155, 6, 6, 0.8)),
-    url(recursos/langshoots-Q3e5ucjJV5I-unsplash-min.jpg);
+  background-image: linear-gradient(rgb(153, 0, 0, 0.7), rgba(0, 0, 0, 0.5)),
+    url(recursos/middle-s1-unsplash-min.jpg);
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
@@ -154,16 +154,21 @@ html {
 }
 
 .container {
+  font-family: "Montserrant-light";
   display: grid;
   grid-template-columns: 2fr 1fr 1fr;
   grid-template-rows: 1fr;
-  grid-gap: 1rem;
+  grid-gap: 0.5rem;
   margin: 1.5rem;
   color: white;
 }
 
+.container h3 {
+  font-size: 1rem;
+  margin-bottom: 1rem;
+}
+
 .left-footer {
-  font-family: "Montserrant-light";
   margin-right: 2rem;
 }
 
@@ -177,13 +182,7 @@ html {
   font-size: 0.9rem;
 }
 
-.middle-footer h3 {
-  font-size: 1rem;
-  margin-bottom: 1rem;
-}
-
 .middle-footer {
-  font-family: "Montserrant-light";
   margin-right: 2rem;
   font-size: 0.9rem;
 }
@@ -193,13 +192,37 @@ html {
   list-style-type: none;
 }
 
+.right-footer li {
+  line-height: 2rem;
+  list-style: none;
+}
+
+.right-footer li {
+  font-size: 0.9rem;
+}
+
 a {
   color: white;
   text-decoration: none;
 }
 
+hr {
+  border-width: 0.1rem;
+}
+
+.line-end {
+  padding: 1rem;
+}
+
+.copyright-footer {
+  width: 100%;
+  color: whitesmoke;
+  text-align: center;
+  margin-top: 1rem;
+}
+
 .footer {
   background-color: #2a324b;
-  height: 50%;
+  height: 70%;
   width: 100%;
 }
